# firmata

./: .gitignore  dune-project  dune-workspace  firmata.opam  flake.nix
.github/workflows/: ci.yml
config/: discover.ml
lib/: dune  firmata.ml  firmata.mli  firmata_stubs.cpp  serial.cpp
test/: dune
